feat: Add entity feature

--- a/.env
+++ b/.env
@@ -5,9 +5,9 @@ WEB_API_ORIGIN=/
 # Websocket Host 地址
 WEB_WS_HOST=/
 # 接口 API 代理地址
-WEB_API_PROXY=https://beaver-iot.milesight.com/api/v1
+WEB_API_PROXY=https://demo.beaver-iot.com/api/v1
 # WebSocket 代理地址
-WEB_SOCKET_PROXY=wss://beaver-iot.milesight.com
+WEB_SOCKET_PROXY=wss://demo.beaver-iot.com
 
 # Oauth client ID
 OAUTH_CLIENT_ID=iab
