--- a/.env
+++ b/.env
@@ -5,9 +5,11 @@ WEB_API_ORIGIN=/
 # Websocket Host 地址
 WEB_WS_HOST=/
 # 接口 API 代理地址
-WEB_API_PROXY=https://demo.beaver-iot.com/api/v1
+# WEB_API_PROXY=https://demo.beaver-iot.com/api/v1
+WEB_API_PROXY=http://192.168.43.48:9200
 # WebSocket 代理地址
-WEB_SOCKET_PROXY=wss://demo.beaver-iot.com
+# WEB_SOCKET_PROXY=wss://demo.beaver-iot.com
+WEB_SOCKET_PROXY=ws://192.168.43.48:9200
 
 # Oauth client ID
 OAUTH_CLIENT_ID=iab
