--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -37,6 +37,7 @@
         "react-intl-universal": "^2.11.1",
         "react-router": "^6.26.1",
         "react-router-dom": "^6.26.1",
+        "uuid": "^11.0.3",
         "zustand": "^4.5.5"
     },
     "devDependencies": {
