--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -12,11 +12,12 @@
         "ts-check": "tsc --noEmit"
     },
     "dependencies": {
-        "@lexical/html": "^0.22.0",
-        "@lexical/react": "^0.22.0",
-        "@lexical/selection": "^0.22.0",
-        "@lexical/table": "^0.22.0",
-        "@lexical/utils": "^0.22.0",
+        "@lexical/html": "^0.17.1",
+        "@lexical/react": "^0.17.1",
+        "@lexical/rich-text": "0.17.1",
+        "@lexical/selection": "^0.17.1",
+        "@lexical/table": "^0.17.1",
+        "@lexical/utils": "^0.17.1",
         "@milesight/locales": "workspace:*",
         "@mui/icons-material": "^6.0.2",
         "@mui/material": "^6.1.0",
@@ -28,8 +29,9 @@
         "css-vars-ponyfill": "^2.4.9",
         "dayjs": "^1.11.13",
         "immer": "^10.1.1",
-        "lexical": "^0.22.0",
+        "lexical": "^0.17.1",
         "lodash-es": "^4.17.21",
+        "material-ui-popup-state": "^5.3.3",
         "qs": "^6.13.0",
         "react": "^18.3.1",
         "react-dnd": "^16.0.1",
