--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -41,6 +41,7 @@
         "dayjs": "^1.11.13",
         "immer": "^10.1.1",
         "lodash-es": "^4.17.21",
+        "material-ui-popup-state": "^5.3.3",
         "qs": "^6.13.0",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
