feat: Adjust the filter condition fields of the trigger entity

--- a/apps/web/src/plugin/plugins/trigger/config.json
+++ b/apps/web/src/plugin/plugins/trigger/config.json
@@ -21,7 +21,7 @@
                     "componentProps": {
                         "size": "small",
                         "entityType": ["SERVICE", "PROPERTY"],
-                        "accessMods": ["W", "RW"],
+                        "entityAccessMods": ["W", "RW"],
                         "entityExcludeChildren": true
                     },
                     "rules": {
