feat: dashboard ui ajustment optimisation effect

--- a/apps/web/src/plugin/plugins/trigger/config.json
+++ b/apps/web/src/plugin/plugins/trigger/config.json
@@ -3,10 +3,10 @@
     "name": "Trigger",
     "class": "operate",
     "icon": "./icon.png",
-    "defaultRow": 4,
-    "defaultCol": 4,
-    "minRow": 3,
-    "minCol": 3,
+    "defaultRow": 2,
+    "defaultCol": 2,
+    "minRow": 1,
+    "minCol": 2,
     "configProps": [
         {
             "style": "width: 100%",
@@ -104,9 +104,7 @@
                     "tag": "Tooltip",
                     "class": "trigger-view-title",
                     "style": "white-space: nowrap;overflow: hidden;text-overflow: ellipsis;font-weight: 600;",
-                    "params": [
-                        "title"
-                    ],
+                    "params": ["title"],
                     "themes": {
                         "default": {
                             "style": "color: #272E3B"
@@ -130,17 +128,13 @@
                             "styleDepended": {
                                 "color": "iconColor"
                             },
-                            "params": [
-                                "icon"
-                            ]
+                            "params": ["icon"]
                         },
                         {
                             "tag": "Tooltip",
                             "class": "trigger-view-title",
                             "style": "white-space: nowrap;overflow: hidden;text-overflow: ellipsis;;text-align: center;margin-top: 8px;",
-                            "params": [
-                                "label"
-                            ],
+                            "params": ["label"],
                             "themes": {
                                 "default": {
                                     "style": "color: #6B7785"
