--- a/packages/shared/tsconfig.json
+++ b/packages/shared/tsconfig.json
@@ -24,6 +24,9 @@
         // "noUnusedLocals": true,
         // "noUnusedParameters": true,
         "noFallthroughCasesInSwitch": true,
+        "paths": {
+            "#/*": ["./src/*"]
+        }
     },
     "exclude": ["node_modules"]
 }
