feat: replace the dashboard plugin icons

--- a/apps/web/src/plugin/plugins/data-card/config.json
+++ b/apps/web/src/plugin/plugins/data-card/config.json
@@ -2,7 +2,7 @@
     "type": "dataCard",
     "name": "Card",
     "class": "data_card",
-    "icon": "./icon.png",
+    "icon": "./icon.svg",
     "defaultRow": 2,
     "defaultCol": 3,
     "minRow": 1,
