--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -31,6 +31,7 @@
         "@mui/x-date-pickers": "^7.18.0",
         "@uiw/codemirror-theme-vscode": "^4.23.7",
         "@uiw/react-codemirror": "^4.23.6",
+        "@uiw/react-color": "^2.3.4",
         "@xyflow/react": "^12.3.5",
         "ahooks": "^3.8.1",
         "axios": "^1.7.7",
@@ -60,13 +61,11 @@
         "@types/node": "^20.14.8",
         "@types/qs": "^6.9.15",
         "@types/react": "^18.3.5",
-        "@types/react-color": "^3.0.12",
         "@types/react-dom": "^18.3.0",
         "@types/react-grid-layout": "^1.3.5",
         "@vitejs/plugin-react": "^4.3.1",
         "eslint": "^8.56.0",
         "less": "^4.2.0",
-        "react-color": "^2.19.3",
         "stylelint": "^15.11.0",
         "typescript": "^5.6.2",
         "vite": "^5.4.3",
