feat: dashboard plugin list ui adjustment

--- a/apps/web/src/plugin/plugins/area-chart/config.json
+++ b/apps/web/src/plugin/plugins/area-chart/config.json
@@ -1,6 +1,6 @@
 {
     "type": "areaChart",
-    "name": "Area Chart",
+    "name": "Area",
     "class": "data_chart",
     "icon": "./icon.svg",
     "defaultRow": 4,
