--- a/apps/web/src/plugin/plugins/bar-chart/config.json
+++ b/apps/web/src/plugin/plugins/bar-chart/config.json
@@ -1,6 +1,6 @@
 {
     "type": "barChart",
-    "name": "Bar Chart",
+    "name": "Bar",
     "class": "data_chart",
     "icon": "./icon.svg",
     "defaultRow": 4,
