--- a/apps/web/src/plugin/plugins/horizon-bar-chart/config.json
+++ b/apps/web/src/plugin/plugins/horizon-bar-chart/config.json
@@ -1,6 +1,6 @@
 {
     "type": "horizonBarChart",
-    "name": "Horizon Bar Chart",
+    "name": "Horizon Bar",
     "class": "data_chart",
     "icon": "./icon.svg",
     "defaultRow": 4,
