--- a/apps/web/src/plugin/plugins/pie-chart/config.json
+++ b/apps/web/src/plugin/plugins/pie-chart/config.json
@@ -1,6 +1,6 @@
 {
     "type": "pieChart",
-    "name": "Pie Chart",
+    "name": "Pie",
     "class": "data_chart",
     "icon": "./icon.svg",
     "defaultRow": 4,
