--- a/apps/web/src/plugin/plugins/radar-chart/config.json
+++ b/apps/web/src/plugin/plugins/radar-chart/config.json
@@ -1,6 +1,6 @@
 {
     "type": "radarChart",
-    "name": "Radar Chart",
+    "name": "Radar",
     "class": "data_chart",
     "icon": "./icon.svg",
     "defaultRow": 4,
