--- a/apps/web/src/plugin/plugins/gauge-chart/config.json
+++ b/apps/web/src/plugin/plugins/gauge-chart/config.json
@@ -1,6 +1,6 @@
 {
     "type": "gaugeChart",
-    "name": "Gauge chart",
+    "name": "Gauge",
     "class": "data_chart",
     "icon": "./icon.svg",
     "defaultRow": 4,
