--- a/apps/web/src/plugin/plugins/line-chart/config.json
+++ b/apps/web/src/plugin/plugins/line-chart/config.json
@@ -1,6 +1,6 @@
 {
     "type": "lineChart",
-    "name": "Line Chart",
+    "name": "Line",
     "class": "data_chart",
     "icon": "./icon.svg",
     "defaultRow": 4,
