--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-    "name": "ms-assistant-fe",
-    "version": "0.0.1",
+    "name": "beaver-iot-web",
+    "version": "1.1.0",
     "license": "MIT",
-    "description": "Milesight IoT Assistant",
+    "description": "An open-source platform designed for rapid and intuitive IoT application development.",
     "engines": {
         "node": ">=20.0.0",
         "pnpm": ">=8.0.0"
