feat: Adjust the default color of the chart on the dashboard and the style of the editor component

--- a/apps/web/src/plugin/plugins/icon-remaining/config.json
+++ b/apps/web/src/plugin/plugins/icon-remaining/config.json
@@ -101,7 +101,7 @@
                     "componentProps": {
                         "size": "small"
                     },
-                    "defaultValue": "#3491FA"
+                    "defaultValue": "#8E66FF"
                 }
             ]
         }
