--- a/apps/web/src/plugin/plugins/trigger/config.json
+++ b/apps/web/src/plugin/plugins/trigger/config.json
@@ -66,7 +66,7 @@
                     "type": "iconColorSelect",
                     "key": "bgColor",
                     "style": "flex: 1;",
-                    "defaultValue": "#3491FA",
+                    "defaultValue": "#8E66FF",
                     "componentProps": {
                         "size": "small"
                     }
