chore: add mock mock api config

--- a/.env
+++ b/.env
@@ -10,6 +10,8 @@ WEB_API_PROXY=http://192.168.43.48:9200
 # WebSocket proxy address
 # WEB_SOCKET_PROXY=wss://demo.beaver-iot.com
 WEB_SOCKET_PROXY=ws://192.168.43.48:9200
+# Mock API proxy address
+# MOCK_API_PROXY=https://api.escuelajs.co
 
 # Oauth client ID
 OAUTH_CLIENT_ID=iab
