--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -40,6 +40,7 @@
         "chartjs-plugin-zoom": "^2.1.0",
         "classnames": "^2.5.1",
         "dayjs": "^1.11.13",
+        "file-selector": "^2.1.2",
         "immer": "^10.1.1",
         "lodash-es": "^4.17.21",
         "material-ui-popup-state": "^5.3.3",
