--- a/apps/web/src/plugin/plugins/trigger/config.json
+++ b/apps/web/src/plugin/plugins/trigger/config.json
@@ -7,6 +7,7 @@
     "defaultCol": 2,
     "minRow": 1,
     "minCol": 1,
+    "maxRow": 1,
     "configProps": [
         {
             "style": "width: 100%",
