--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -35,6 +35,7 @@
         "lexical": "^0.17.1",
         "lodash-es": "^4.17.21",
         "material-ui-popup-state": "^5.3.3",
+        "minimist": "^1.2.8",
         "qs": "^6.13.0",
         "react": "^18.3.1",
         "react-dnd": "^16.0.1",
@@ -51,6 +52,7 @@
     "devDependencies": {
         "@milesight/spec": "workspace:*",
         "@types/lodash-es": "^4.17.12",
+        "@types/minimist": "^1.2.5",
         "@types/qs": "^6.9.15",
         "@types/react": "^18.3.5",
         "@types/react-dom": "^18.3.0",
