fix: Dashboard cards should only be able to select readable attributes

--- a/apps/web/src/plugin/plugins/data-card/config.json
+++ b/apps/web/src/plugin/plugins/data-card/config.json
@@ -19,7 +19,8 @@
                     "style": "width: 100%",
                     "componentProps": {
                         "entityType": ["PROPERTY"],
-                        "entityValueTypes": ["STRING", "LONG", "DOUBLE", "BOOLEAN"]
+                        "entityValueTypes": ["STRING", "LONG", "DOUBLE", "BOOLEAN"],
+                        "entityAccessMod": ["R", "RW"]
                     },
                     "rules": {
                         "required": true
