--- a/apps/web/src/plugin/plugins/icon-remaining/config.json
+++ b/apps/web/src/plugin/plugins/icon-remaining/config.json
@@ -26,7 +26,8 @@
                     "getDataUrl": "",
                     "componentProps": {
                         "entityType": ["PROPERTY"],
-                        "entityValueTypes": ["LONG", "DOUBLE"]
+                        "entityValueTypes": ["LONG", "DOUBLE"],
+                        "entityAccessMod": ["R", "RW"]
                     },
                     "rules": {
                         "required": true
