--- a/apps/web/src/plugin/plugins/line-chart/config.json
+++ b/apps/web/src/plugin/plugins/line-chart/config.json
@@ -38,6 +38,9 @@
                     "style": "width: 100%",
                     "getDataUrl": "",
                     "valueType": "array",
+                    "componentProps": {
+                        "entityAccessMod": ["R", "RW"]
+                    },
                     "rules": {
                         "required": true
                     }
