--- a/apps/web/src/plugin/plugins/pie-chart/config.json
+++ b/apps/web/src/plugin/plugins/pie-chart/config.json
@@ -21,6 +21,7 @@
                     "componentProps": {
                         "entityType": ["PROPERTY", "EVENT"],
                         "entityValueTypes": ["BOOLEAN", "STRING"],
+                        "entityAccessMod": ["R", "RW"],
                         "customFilterEntity": "filterEntityStringHasEnum"
                     },
                     "rules": {
