--- a/apps/web/src/plugin/plugins/area-chart/config.json
+++ b/apps/web/src/plugin/plugins/area-chart/config.json
@@ -21,7 +21,8 @@
                     "valueType": "array",
                     "componentProps": {
                         "entityType": ["PROPERTY", "EVENT"],
-                        "entityValueTypes": ["LONG", "DOUBLE"]
+                        "entityValueTypes": ["LONG", "DOUBLE"],
+                        "entityAccessMod": ["R", "RW"]
                     },
                     "rules": {
                         "required": true
