--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -25,6 +25,7 @@
         "@emotion/react": "^11.13.3",
         "@emotion/styled": "^11.13.0",
         "@milesight/locales": "workspace:*",
+        "@milesight/responsive-style": "^1.1.3",
         "@milesight/shared": "workspace:*",
         "@mui/material": "^6.1.0",
         "@mui/x-data-grid": "^7.16.0",
