--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -35,12 +35,10 @@
         "@xyflow/react": "^12.3.5",
         "ahooks": "^3.8.1",
         "axios": "^1.7.7",
-        "chart.js": "^4.4.4",
-        "chartjs-adapter-date-fns": "^3.0.0",
-        "chartjs-plugin-zoom": "^2.1.0",
         "classnames": "^2.5.1",
         "dayjs": "^1.11.13",
         "file-selector": "^2.1.2",
+        "echarts": "^5.6.0",
         "immer": "^10.1.1",
         "lodash-es": "^4.17.21",
         "material-ui-popup-state": "^5.3.3",
