chore: Update the default proxy url

--- a/.env
+++ b/.env
@@ -5,11 +5,9 @@ WEB_API_ORIGIN=/
 # WebSocket Host address
 WEB_WS_HOST=/
 # Interface API proxy address
-# WEB_API_PROXY=https://demo.beaver-iot.com/api/v1
-WEB_API_PROXY=http://192.168.43.48:9200
+WEB_API_PROXY=https://demo.beaver-iot.com/api/v1
 # WebSocket proxy address
-# WEB_SOCKET_PROXY=wss://demo.beaver-iot.com
-WEB_SOCKET_PROXY=ws://192.168.43.48:9200
+WEB_SOCKET_PROXY=wss://demo.beaver-iot.com
 # Mock API proxy address
 # MOCK_API_PROXY=https://api.escuelajs.co
 
