--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -43,6 +43,7 @@
         "dayjs": "^1.11.13",
         "file-selector": "^2.1.2",
         "immer": "^10.1.1",
+        "konva": "^9.3.20",
         "lodash-es": "^4.17.21",
         "material-ui-popup-state": "^5.3.3",
         "mqtt": "^5.13.0",
@@ -52,6 +53,8 @@
         "react-grid-layout": "^1.5.1",
         "react-hook-form": "^7.53.0",
         "react-intl-universal": "^2.11.1",
+        "react-konva": "^18.2.10",
+        "react-konva-utils": "^1.1.0",
         "react-router": "^6.26.1",
         "react-router-dom": "^6.26.1",
         "uuid": "^11.0.3",
