--- a/apps/web/src/plugin/plugins/line-chart/config.json
+++ b/apps/web/src/plugin/plugins/line-chart/config.json
@@ -39,6 +39,7 @@
                     "getDataUrl": "",
                     "valueType": "array",
                     "componentProps": {
+                        "entityType": ["PROPERTY"],
                         "entityAccessMod": ["R", "RW"]
                     },
                     "rules": {
