--- a/apps/web/src/plugin/plugins/pie-chart/config.json
+++ b/apps/web/src/plugin/plugins/pie-chart/config.json
@@ -19,7 +19,7 @@
                     "style": "width: 100%",
                     "getDataUrl": "",
                     "componentProps": {
-                        "entityType": ["PROPERTY", "EVENT"],
+                        "entityType": ["PROPERTY"],
                         "entityValueTypes": ["BOOLEAN", "STRING"],
                         "entityAccessMod": ["R", "RW"],
                         "customFilterEntity": "filterEntityStringHasEnum"
