fix: Restrict the lineChart to only select entities of types LONG and DOUBLE

--- a/apps/web/src/plugin/plugins/line-chart/config.json
+++ b/apps/web/src/plugin/plugins/line-chart/config.json
@@ -40,6 +40,7 @@
                     "valueType": "array",
                     "componentProps": {
                         "entityType": ["PROPERTY"],
+                        "entityValueTypes": ["LONG", "DOUBLE"],
                         "entityAccessMod": ["R", "RW"]
                     },
                     "rules": {
