chore: Support to choose translators in terminal

--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
         "preview": "pnpm --filter=@app/* -r run preview",
         "i18n:import": "pnpm --filter=@milesight/locales run import",
         "i18n:export": "pnpm --filter=@milesight/locales run export",
-        "i18n:export-all": "pnpm --filter=@milesight/locales run exportall",
+        "i18n:create-job": "pnpm --filter=@milesight/locales run phrase:job",
+        "i18n:import-remote": "pnpm --filter=@milesight/locales run phrase:import",
         "clean": "rimraf -g node_modules */**/node_modules",
         "clean:cache": "rimraf -g */**/node_modules/.vite */**/node_modules/.cache",
         "lint:apps": "pnpm --filter=@app/* -r run lint:fix",
