--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -38,15 +38,18 @@
         "axios": "^1.7.7",
         "classnames": "^2.5.1",
         "dayjs": "^1.11.13",
-        "file-selector": "^2.1.2",
         "echarts": "^5.6.0",
+        "file-selector": "^2.1.2",
         "immer": "^10.1.1",
+        "immutability-helper": "^3.1.1",
         "konva": "^9.3.20",
         "lodash-es": "^4.17.21",
         "material-ui-popup-state": "^5.3.3",
         "mqtt": "^5.13.0",
         "qs": "^6.13.0",
         "react": "^18.3.1",
+        "react-dnd": "^16.0.1",
+        "react-dnd-html5-backend": "^16.0.1",
         "react-dom": "^18.3.1",
         "react-grid-layout": "^1.5.1",
         "react-hook-form": "^7.53.0",
