support js for migration

--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -22,7 +22,8 @@
         "noFallthroughCasesInSwitch": true,
 
         "paths": {
-            "@/*": ["./src/*"]
+            "@/*": ["./src/*"],
+            "@coremodules/*": ["./src/pages/third-party/e3ms/core/*"]
         }
     },
     "include": ["src"],
