--- a/.env
+++ b/.env
@@ -5,9 +5,9 @@ WEB_API_ORIGIN=/
 # WebSocket Host address
 WEB_WS_HOST=/
 # Interface API proxy address
-WEB_API_PROXY=https://demo.beaver-iot.com/api/v1
+WEB_API_PROXY=http://localhost:9200
 # WebSocket proxy address
-WEB_SOCKET_PROXY=wss://demo.beaver-iot.com
+WEB_SOCKET_PROXY=ws://localhost:9200
 # Mock API proxy address
 # MOCK_API_PROXY=https://api.escuelajs.co
 
