--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -30,6 +30,7 @@
         "@mui/material": "^6.1.0",
         "@mui/x-data-grid": "^7.16.0",
         "@mui/x-date-pickers": "^7.18.0",
+        "@reduxjs/toolkit": "^2.2.7",
         "@uiw/codemirror-theme-vscode": "^4.23.7",
         "@uiw/react-codemirror": "^4.23.6",
         "@uiw/react-color": "^2.3.4",
@@ -38,9 +39,13 @@
         "axios": "^1.7.7",
         "classnames": "^2.5.1",
         "dayjs": "^1.11.13",
-        "file-selector": "^2.1.2",
         "echarts": "^5.6.0",
+        "file-selector": "^2.1.2",
+        "highcharts": "^11.4.8",
+        "highcharts-react-official": "^3.2.1",
+        "html2canvas": "^1.4.1",
         "immer": "^10.1.1",
+        "jspdf": "^3.0.1",
         "konva": "^9.3.20",
         "lodash-es": "^4.17.21",
         "material-ui-popup-state": "^5.3.3",
@@ -48,15 +53,21 @@
         "qs": "^6.13.0",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
+        "react-feather": "^2.0.10",
         "react-grid-layout": "^1.5.1",
         "react-hook-form": "^7.53.0",
         "react-intl-universal": "^2.11.1",
         "react-konva": "^18.2.10",
         "react-konva-utils": "^1.1.0",
+        "react-redux": "^8.0.5",
         "react-router": "^6.26.1",
         "react-router-dom": "^6.26.1",
+        "reactstrap": "^9.2.3",
         "uuid": "^11.0.3",
-        "zustand": "^4.5.5"
+        "zustand": "^4.5.5",
+        "bootstrap": "5.3.3",
+        "react-bootstrap": "^2.10.5",
+        "react-icons": "^5.3.0"
     },
     "devDependencies": {
         "@milesight/scripts": "workspace:*",
@@ -70,6 +81,8 @@
         "@vitejs/plugin-react": "^4.3.1",
         "eslint": "^8.56.0",
         "less": "^4.2.0",
+        "sass": "^1.89.2",
+        "sass-loader": "16.0.2",
         "stylelint": "^15.11.0",
         "typescript": "^5.6.2",
         "vite": "^5.4.18",
