--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -38,8 +38,8 @@
         "axios": "^1.7.7",
         "classnames": "^2.5.1",
         "dayjs": "^1.11.13",
-        "file-selector": "^2.1.2",
         "echarts": "^5.6.0",
+        "file-selector": "^2.1.2",
         "immer": "^10.1.1",
         "konva": "^9.3.20",
         "lodash-es": "^4.17.21",
@@ -55,6 +55,7 @@
         "react-konva-utils": "^1.1.0",
         "react-router": "^6.26.1",
         "react-router-dom": "^6.26.1",
+        "react-window": "^1.8.11",
         "uuid": "^11.0.3",
         "zustand": "^4.5.5"
     },
@@ -67,6 +68,7 @@
         "@types/react": "^18.3.5",
         "@types/react-dom": "^18.3.0",
         "@types/react-grid-layout": "^1.3.5",
+        "@types/react-window": "^1.8.8",
         "@vitejs/plugin-react": "^4.3.1",
         "eslint": "^8.56.0",
         "less": "^4.2.0",
